service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-reg-service
spec:
  selector:
    app: userregister
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
