ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-reg-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-reg-service
            port:
              number: 80
